--- a/css/BananaLeaf.css
+++ b/css/BananaLeaf.css
@@ -165,6 +165,10 @@ footer {
     body {
         background-color: #f2eeea;
     }
+
+    figure {
+        margin-right: 7%;
+    }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
@@ -186,6 +190,9 @@ footer {
         margin-left: 3%;
     }
 
+    figure {
+        margin-right: 7%;
+    }
 
     .figIcon {
         height: 115px;
@@ -246,7 +253,7 @@ footer {
     }
 
     footer {
-        margin-top: 77%;
+        margin-top: 82%;
     }
 
 }
@@ -313,6 +320,6 @@ footer {
     }
 
     footer {
-        margin-top: 100%;
+        margin-top: 104%;
     }
 }
